--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "astro": "^5.4.3",
+    "sanitize.css": "^13.0.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
